--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,13 +9,13 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">19,913</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">11,377</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">TS_01.Price</td><td><a href="#m0">clickUpcomingFromDrpdwn</a></td><td rowspan="1">1592976796925</td><td rowspan="1">582</td></tr><tr class="passedeven"><td><a href="#m1">outputDisplay</a></td><td rowspan="1">1592976798415</td><td rowspan="1">1030</td></tr><tr class="passedeven"><td><a href="#m2">selectPriceRangeLink</a></td><td rowspan="1">1592976797523</td><td rowspan="1">878</td></tr><tr class="passedeven"><td><a href="#m3">startBrowser</a></td><td rowspan="1">1592976796742</td><td rowspan="1">164</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">TS_02.Usedcarschn</td><td><a href="#m0">clickSearchUsedCarsFromDrpdwn</a></td><td rowspan="1">1593131936276</td><td rowspan="1">1751</td></tr><tr class="passedeven"><td><a href="#m1">navigateToUsedCarsPage</a></td><td rowspan="1">1593131938051</td><td rowspan="1">352</td></tr><tr class="passedeven"><td><a href="#m2">outputDisplay</a></td><td rowspan="1">1593131938414</td><td rowspan="1">410</td></tr><tr class="passedeven"><td><a href="#m3">startBrowser</a></td><td rowspan="1">1593131936003</td><td rowspan="1">250</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">TS_01.Price#clickUpcomingFromDrpdwn</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">TS_01.Price#outputDisplay</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">TS_01.Price#selectPriceRangeLink</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">TS_01.Price#startBrowser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">TS_02.Usedcarschn#clickSearchUsedCarsFromDrpdwn</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">TS_02.Usedcarschn#navigateToUsedCarsPage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">TS_02.Usedcarschn#outputDisplay</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">TS_02.Usedcarschn#startBrowser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
