--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\rawna\AppData\Local\Temp\testng-eclipse-30049518\testng-customsuite.xml</span>
+                    <span>C:\Users\rawna\AppData\Local\Temp\testng-eclipse--1794990011\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -59,7 +59,7 @@
                 </li>
                 <li>
                   <a href="#" class="navigator-link " panel-name="group-Default_suite">
-                    <span>0 groups</span>
+                    <span>1 group</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,22 +102,22 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="TS_01.Price" hash-for-method="clickUpcomingFromDrpdwn">clickUpcomingFromDrpdwn</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="TS_02.Usedcarschn" hash-for-method="clickSearchUsedCarsFromDrpdwn">clickSearchUsedCarsFromDrpdwn</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="TS_01.Price" hash-for-method="outputDisplay">outputDisplay</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="TS_02.Usedcarschn" hash-for-method="navigateToUsedCarsPage">navigateToUsedCarsPage</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="TS_01.Price" hash-for-method="selectPriceRangeLink">selectPriceRangeLink</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="TS_02.Usedcarschn" hash-for-method="outputDisplay">outputDisplay</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="TS_01.Price" hash-for-method="startBrowser">startBrowser</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="TS_02.Usedcarschn" hash-for-method="startBrowser">startBrowser</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -135,14 +135,21 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">TS_01.Price</span>
+              <span class="class-name">TS_02.Usedcarschn</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="clickUpcomingFromDrpdwn">
-                  </a> <!-- clickUpcomingFromDrpdwn -->
-                  <span class="method-name">clickUpcomingFromDrpdwn</span>
+                  <a name="clickSearchUsedCarsFromDrpdwn">
+                  </a> <!-- clickSearchUsedCarsFromDrpdwn -->
+                  <span class="method-name">clickSearchUsedCarsFromDrpdwn</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="navigateToUsedCarsPage">
+                  </a> <!-- navigateToUsedCarsPage -->
+                  <span class="method-name">navigateToUsedCarsPage</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -150,13 +157,6 @@
                   <a name="outputDisplay">
                   </a> <!-- outputDisplay -->
                   <span class="method-name">outputDisplay</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="selectPriceRangeLink">
-                  </a> <!-- selectPriceRangeLink -->
-                  <span class="method-name">selectPriceRangeLink</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -171,7 +171,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\rawna\AppData\Local\Temp\testng-eclipse-30049518\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\rawna\AppData\Local\Temp\testng-eclipse--1794990011\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -180,7 +180,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;TS_01.Price&quot;/&gt;
+      &lt;class name=&quot;TS_02.Usedcarschn&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -204,6 +204,26 @@
             <span class="header-content">Groups for Default suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="test-group">
+              <span class="test-group-name">SmokeTest</span>
+              <br/>
+              <div class="method-in-group">
+                <span class="method-in-group-name">clickSearchUsedCarsFromDrpdwn</span>
+                <br/>
+              </div> <!-- method-in-group -->
+              <div class="method-in-group">
+                <span class="method-in-group-name">navigateToUsedCarsPage</span>
+                <br/>
+              </div> <!-- method-in-group -->
+              <div class="method-in-group">
+                <span class="method-in-group-name">outputDisplay</span>
+                <br/>
+              </div> <!-- method-in-group -->
+              <div class="method-in-group">
+                <span class="method-in-group-name">startBrowser</span>
+                <br/>
+              </div> <!-- method-in-group -->
+            </div> <!-- test-group -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="times-Default_suite" class="panel">
@@ -222,21 +242,21 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(4);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'outputDisplay')
-data.setCell(0, 2, 'TS_01.Price')
-data.setCell(0, 3, 1030);
+data.setCell(0, 1, 'clickSearchUsedCarsFromDrpdwn')
+data.setCell(0, 2, 'TS_02.Usedcarschn')
+data.setCell(0, 3, 1751);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'selectPriceRangeLink')
-data.setCell(1, 2, 'TS_01.Price')
-data.setCell(1, 3, 878);
+data.setCell(1, 1, 'outputDisplay')
+data.setCell(1, 2, 'TS_02.Usedcarschn')
+data.setCell(1, 3, 410);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'clickUpcomingFromDrpdwn')
-data.setCell(2, 2, 'TS_01.Price')
-data.setCell(2, 3, 582);
+data.setCell(2, 1, 'navigateToUsedCarsPage')
+data.setCell(2, 2, 'TS_02.Usedcarschn')
+data.setCell(2, 3, 352);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'startBrowser')
-data.setCell(3, 2, 'TS_01.Price')
-data.setCell(3, 3, 164);
+data.setCell(3, 2, 'TS_02.Usedcarschn')
+data.setCell(3, 3, 250);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
@@ -267,54 +287,54 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">TS_01.Price</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">TS_02.Usedcarschn</div> <!-- chronological-class-name -->
               <div class="configuration-suite before">
                 <span class="method-name">reportSetUp</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-suite before -->
               <div class="configuration-class before">
-                <span class="method-name">setUp(chrome, local)</span>
-                <span class="method-start">437 ms</span>
+                <span class="method-name">setUp(chrome, local, null)</span>
+                <span class="method-start">512 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">startBrowser</span>
-                <span class="method-start">16923 ms</span>
+                <span class="method-start">8125 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">testResult([TestResult name=startBrowser status=SUCCESS method=Price.startBrowser()[pri:0, instance:TS_01.Price...)</span>
-                <span class="method-start">17089 ms</span>
+                <span class="method-name">testResult([TestResult name=startBrowser status=SUCCESS method=Usedcarschn.startBrowser()[pri:0, instance:TS_02...)</span>
+                <span class="method-start">8377 ms</span>
               </div> <!-- configuration-method after -->
               <div class="test-method">
-                <span class="method-name">clickUpcomingFromDrpdwn</span>
-                <span class="method-start">17106 ms</span>
+                <span class="method-name">clickSearchUsedCarsFromDrpdwn</span>
+                <span class="method-start">8398 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">testResult([TestResult name=clickUpcomingFromDrpdwn status=SUCCESS method=Price.clickUpcomingFromDrpdwn()[pri:1...)</span>
-                <span class="method-start">17689 ms</span>
+                <span class="method-name">testResult([TestResult name=clickSearchUsedCarsFromDrpdwn status=SUCCESS method=Usedcarschn.clickSearchUsedCars...)</span>
+                <span class="method-start">10152 ms</span>
               </div> <!-- configuration-method after -->
               <div class="test-method">
-                <span class="method-name">selectPriceRangeLink</span>
-                <span class="method-start">17704 ms</span>
+                <span class="method-name">navigateToUsedCarsPage</span>
+                <span class="method-start">10173 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">testResult([TestResult name=selectPriceRangeLink status=SUCCESS method=Price.selectPriceRangeLink()[pri:2, inst...)</span>
-                <span class="method-start">18583 ms</span>
+                <span class="method-name">testResult([TestResult name=navigateToUsedCarsPage status=SUCCESS method=Usedcarschn.navigateToUsedCarsPage()[p...)</span>
+                <span class="method-start">10526 ms</span>
               </div> <!-- configuration-method after -->
               <div class="test-method">
                 <span class="method-name">outputDisplay</span>
-                <span class="method-start">18596 ms</span>
+                <span class="method-start">10536 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">testResult([TestResult name=outputDisplay status=SUCCESS method=Price.outputDisplay()[pri:3, instance:TS_01.Pri...)</span>
-                <span class="method-start">19627 ms</span>
+                <span class="method-name">testResult([TestResult name=outputDisplay status=SUCCESS method=Usedcarschn.outputDisplay()[pri:3, instance:TS_...)</span>
+                <span class="method-start">10947 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-class after">
                 <span class="method-name">closeBrowser</span>
-                <span class="method-start">19636 ms</span>
+                <span class="method-start">10958 ms</span>
               </div> <!-- configuration-class after -->
               <div class="configuration-suite after">
                 <span class="method-name">flush</span>
-                <span class="method-start">20357 ms</span>
+                <span class="method-start">11900 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
