Editted for Website Update
Signed-off-by: paviyaa <senthilkumarjs67@gmail.com>

--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,28 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="83b467">  <td>20/06/24 11:03:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Price.clickUpcomingFromDrpdwn()[pri:1, instance:TS_01.Price@35ef1869]">clickUpcomingFromDrpdwn</td> 
-  <td>main@1202683709</td>   <td></td> </tr>
-<tr bgcolor="af90ec">  <td>20/06/24 11:03:19</td>   <td>2530</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BeginnerClass.closeBrowser()[pri:0, instance:TS_01.Price@35ef1869]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1202683709</td>   <td></td> </tr>
-<tr bgcolor="af90ec">  <td>20/06/24 11:03:20</td>   <td>3251</td> <td title="&lt;&lt;BeginnerClass.flush()[pri:0, instance:TS_01.Price@35ef1869]">&lt;&lt;flush</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1202683709</td>   <td></td> </tr>
-<tr bgcolor="83b467">  <td>20/06/24 11:03:18</td>   <td>1490</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Price.outputDisplay()[pri:3, instance:TS_01.Price@35ef1869]">outputDisplay</td> 
-  <td>main@1202683709</td>   <td></td> </tr>
-<tr bgcolor="af90ec">  <td>20/06/24 11:02:59</td>   <td>-17101</td> <td title="&gt;&gt;BeginnerClass.reportSetUp()[pri:0, instance:TS_01.Price@35ef1869]">&gt;&gt;reportSetUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1202683709</td>   <td></td> </tr>
-<tr bgcolor="83b467">  <td>20/06/24 11:03:17</td>   <td>598</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Price.selectPriceRangeLink()[pri:2, instance:TS_01.Price@35ef1869]">selectPriceRangeLink</td> 
-  <td>main@1202683709</td>   <td></td> </tr>
-<tr bgcolor="af90ec">  <td>20/06/24 11:03:00</td>   <td>-16664</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BeginnerClass.setUp(java.lang.String, java.lang.String)[pri:0, instance:TS_01.Price@35ef1869]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1202683709</td>   <td></td> </tr>
-<tr bgcolor="83b467">  <td>20/06/24 11:03:16</td>   <td>-183</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Price.startBrowser()[pri:0, instance:TS_01.Price@35ef1869]">startBrowser</td> 
-  <td>main@1202683709</td>   <td></td> </tr>
-<tr bgcolor="af90ec">  <td>20/06/24 11:03:16</td>   <td>-16</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BeginnerClass.testResult(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:TS_01.Price@35ef1869]">&lt;&lt;testResult</td> 
-<td>&nbsp;</td>  <td>main@1202683709</td>   <td></td> </tr>
-<tr bgcolor="af90ec">  <td>20/06/24 11:03:17</td>   <td>584</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BeginnerClass.testResult(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:TS_01.Price@35ef1869]">&lt;&lt;testResult</td> 
-<td>&nbsp;</td>  <td>main@1202683709</td>   <td></td> </tr>
-<tr bgcolor="af90ec">  <td>20/06/24 11:03:18</td>   <td>1477</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BeginnerClass.testResult(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:TS_01.Price@35ef1869]">&lt;&lt;testResult</td> 
-<td>&nbsp;</td>  <td>main@1202683709</td>   <td></td> </tr>
-<tr bgcolor="af90ec">  <td>20/06/24 11:03:19</td>   <td>2521</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BeginnerClass.testResult(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:TS_01.Price@35ef1869]">&lt;&lt;testResult</td> 
-<td>&nbsp;</td>  <td>main@1202683709</td>   <td></td> </tr>
+<tr bgcolor="9b92d7">  <td>20/06/26 08:02:42</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BeginnerClass.closeBrowser()[pri:0, instance:TS_01.UpcomingRequirement@7ed7259e]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1847637306</td>   <td></td> </tr>
+<tr bgcolor="9b92d7">  <td>20/06/26 08:02:43</td>   <td>644</td> <td title="&lt;&lt;BeginnerClass.flush()[pri:0, instance:TS_01.UpcomingRequirement@7ed7259e]">&lt;&lt;flush</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1847637306</td>   <td></td> </tr>
+<tr bgcolor="bcb197">  <td>20/06/26 08:02:40</td>   <td>-1932</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UpcomingRequirement.loadUpcomingBikesPage()[pri:1, instance:TS_01.UpcomingRequirement@7ed7259e]">loadUpcomingBikesPage</td> 
+  <td>main@1847637306</td>   <td></td> </tr>
+<tr bgcolor="bcb197">  <td>20/06/26 08:02:42</td>   <td>-354</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UpcomingRequirement.navigateToUpcomingBikesPage()[pri:2, instance:TS_01.UpcomingRequirement@7ed7259e]">navigateToUpcomingBikesPage</td> 
+  <td>main@1847637306</td>   <td></td> </tr>
+<tr bgcolor="bcb197">  <td>20/06/26 08:02:42</td>   <td>-278</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UpcomingRequirement.outputDisplay()[pri:3, instance:TS_01.UpcomingRequirement@7ed7259e]">outputDisplay</td> 
+  <td>main@1847637306</td>   <td></td> </tr>
+<tr bgcolor="9b92d7">  <td>20/06/26 08:02:34</td>   <td>-8349</td> <td title="&gt;&gt;BeginnerClass.reportSetUp()[pri:0, instance:TS_01.UpcomingRequirement@7ed7259e]">&gt;&gt;reportSetUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1847637306</td>   <td></td> </tr>
+<tr bgcolor="9b92d7">  <td>20/06/26 08:02:34</td>   <td>-8020</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BeginnerClass.setUp(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:TS_01.UpcomingRequirement@7ed7259e]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1847637306</td>   <td></td> </tr>
+<tr bgcolor="bcb197">  <td>20/06/26 08:02:40</td>   <td>-2067</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UpcomingRequirement.startBrowser()[pri:0, instance:TS_01.UpcomingRequirement@7ed7259e]">startBrowser</td> 
+  <td>main@1847637306</td>   <td></td> </tr>
+<tr bgcolor="9b92d7">  <td>20/06/26 08:02:40</td>   <td>-1944</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BeginnerClass.testResult(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:TS_01.UpcomingRequirement@7ed7259e]">&lt;&lt;testResult</td> 
+<td>&nbsp;</td>  <td>main@1847637306</td>   <td></td> </tr>
+<tr bgcolor="9b92d7">  <td>20/06/26 08:02:42</td>   <td>-362</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BeginnerClass.testResult(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:TS_01.UpcomingRequirement@7ed7259e]">&lt;&lt;testResult</td> 
+<td>&nbsp;</td>  <td>main@1847637306</td>   <td></td> </tr>
+<tr bgcolor="9b92d7">  <td>20/06/26 08:02:42</td>   <td>-286</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BeginnerClass.testResult(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:TS_01.UpcomingRequirement@7ed7259e]">&lt;&lt;testResult</td> 
+<td>&nbsp;</td>  <td>main@1847637306</td>   <td></td> </tr>
+<tr bgcolor="9b92d7">  <td>20/06/26 08:02:42</td>   <td>-7</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BeginnerClass.testResult(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:TS_01.UpcomingRequirement@7ed7259e]">&lt;&lt;testResult</td> 
+<td>&nbsp;</td>  <td>main@1847637306</td>   <td></td> </tr>
 </table>
