--- a/src/test/report/TestSuite Report.html
+++ b/src/test/report/TestSuite Report.html
@@ -46,7 +46,7 @@
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<li>
                 <a href='#!'>
-                    <span class='label suite-start-time blue darken-3'>06-26-2020 06:11:20</span>
+                    <span class='label suite-start-time blue darken-3'>06-26-2020 08:02:34</span>
 				</a>
 			</li>
 			<li>
@@ -157,15 +157,15 @@
 				
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='1'>
 					<div class='test-heading'>
-						<span class='test-name'>Used cars in Chennai - Direct</span>
-						<span class='test-time'>06-26-2020 06:11:28</span>
+						<span class='test-name'>UpcomingBIkes display</span>
+						<span class='test-time'>06-26-2020 08:02:40</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>06-26-2020 06:11:28</span>
-	<span class='label end-time'>06-26-2020 06:11:31</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 2s+998ms</span>
+	<span class='label start-time'>06-26-2020 08:02:40</span>
+	<span class='label end-time'>06-26-2020 08:02:43</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 2s+680ms</span>
 </div>
 	<div class='test-steps'>
 		<table class='bordered table-results'>
@@ -179,72 +179,72 @@
 			<tbody>
 				<tr class='log' status='info'>
 					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-					<td class='timestamp'>6:11:28 AM</td>
+					<td class='timestamp'>8:02:40 AM</td>
 					<td class='step-details'>Initializing Browser and navigating to the HomePage Website</td>
 				</tr>
 				<tr class='log' status='info'>
 					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-					<td class='timestamp'>6:11:28 AM</td>
+					<td class='timestamp'>8:02:40 AM</td>
 					<td class='step-details'>Browser is launched and navigated to Homepage of the website</td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>6:11:28 AM</td>
+					<td class='timestamp'>8:02:40 AM</td>
 					<td class='step-details'><span class='label white-text green'>startBrowser Test passed</span></td>
 				</tr>
 				<tr class='log' status='info'>
 					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-					<td class='timestamp'>6:11:29 AM</td>
-					<td class='step-details'>Placing cursor in UsedCar dropdown and Selecting the Search Used Cars in the UsedCar drop down</td>
+					<td class='timestamp'>8:02:41 AM</td>
+					<td class='step-details'>Passing the Input Text into the search bar</td>
 				</tr>
 				<tr class='log' status='info'>
 					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-					<td class='timestamp'>6:11:30 AM</td>
-					<td class='step-details'>Search Used Cars is selected in the used car Drop down</td>
+					<td class='timestamp'>8:02:42 AM</td>
+					<td class='step-details'>Input Value is passed and autosuggested link is clicked</td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>6:11:30 AM</td>
-					<td class='step-details'><span class='label white-text green'>clickSearchUsedCarsFromDrpdwn Test passed</span></td>
+					<td class='timestamp'>8:02:42 AM</td>
+					<td class='step-details'><span class='label white-text green'>loadUpcomingBikesPage Test passed</span></td>
 				</tr>
 				<tr class='log' status='info'>
 					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-					<td class='timestamp'>6:11:30 AM</td>
-					<td class='step-details'>Navigating to used cars page</td>
+					<td class='timestamp'>8:02:42 AM</td>
+					<td class='step-details'>Navigating to Honda bikes page</td>
 				</tr>
 				<tr class='log' status='info'>
 					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-					<td class='timestamp'>6:11:31 AM</td>
-					<td class='step-details'>Navigated to used cars page</td>
+					<td class='timestamp'>8:02:42 AM</td>
+					<td class='step-details'>Navigated to upcoming Honda Bikes page</td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>6:11:31 AM</td>
-					<td class='step-details'><span class='label white-text green'>navigateToUsedCarsPage Test passed</span></td>
+					<td class='timestamp'>8:02:42 AM</td>
+					<td class='step-details'><span class='label white-text green'>navigateToUpcomingBikesPage Test passed</span></td>
 				</tr>
 				<tr class='log' status='info'>
 					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-					<td class='timestamp'>6:11:31 AM</td>
+					<td class='timestamp'>8:02:42 AM</td>
 					<td class='step-details'>Asserting and displaying acquired results</td>
 				</tr>
 				<tr class='log' status='info'>
 					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-					<td class='timestamp'>6:11:31 AM</td>
-					<td class='step-details'>popular model used cars in selected city are asserted and written into Excel</td>
+					<td class='timestamp'>8:02:42 AM</td>
+					<td class='step-details'>Upcoming bikes of the brand honda are asserted and written into Excel</td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>6:11:31 AM</td>
+					<td class='timestamp'>8:02:42 AM</td>
 					<td class='step-details'><span class='label white-text green'>outputDisplay Test passed</span></td>
 				</tr>
 				<tr class='log' status='info'>
 					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-					<td class='timestamp'>6:11:31 AM</td>
+					<td class='timestamp'>8:02:43 AM</td>
 					<td class='step-details'>Browser is closed</td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>6:11:31 AM</td>
+					<td class='timestamp'>8:02:43 AM</td>
 					<td class='step-details'><span class='label white-text green'>Browser closed successfully</span></td>
 				</tr>
 			</tbody>
@@ -299,19 +299,19 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>06-26-2020 06:11:20</div>
+					<div class='panel-lead'>06-26-2020 08:02:34</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>06-26-2020 06:11:31</div>
+			 		<div class='panel-lead'>06-26-2020 08:02:43</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>0h 0m 10s+975ms</div>
+					<div class='panel-lead'>0h 0m 8s+940ms</div>
 				</div>
 			</div>
 			<div class='col s4'>
