--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\rawna\AppData\Local\Temp\testng-eclipse--1794990011\testng-customsuite.xml</span>
+                    <span>C:\Users\rawna\AppData\Local\Temp\testng-eclipse--1088077184\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,22 +102,22 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="TS_02.Usedcarschn" hash-for-method="clickSearchUsedCarsFromDrpdwn">clickSearchUsedCarsFromDrpdwn</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="TS_01.UpcomingRequirement" hash-for-method="loadUpcomingBikesPage">loadUpcomingBikesPage</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="TS_02.Usedcarschn" hash-for-method="navigateToUsedCarsPage">navigateToUsedCarsPage</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="TS_01.UpcomingRequirement" hash-for-method="navigateToUpcomingBikesPage">navigateToUpcomingBikesPage</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="TS_02.Usedcarschn" hash-for-method="outputDisplay">outputDisplay</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="TS_01.UpcomingRequirement" hash-for-method="outputDisplay">outputDisplay</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="TS_02.Usedcarschn" hash-for-method="startBrowser">startBrowser</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="TS_01.UpcomingRequirement" hash-for-method="startBrowser">startBrowser</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -135,21 +135,21 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">TS_02.Usedcarschn</span>
+              <span class="class-name">TS_01.UpcomingRequirement</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="clickSearchUsedCarsFromDrpdwn">
-                  </a> <!-- clickSearchUsedCarsFromDrpdwn -->
-                  <span class="method-name">clickSearchUsedCarsFromDrpdwn</span>
+                  <a name="loadUpcomingBikesPage">
+                  </a> <!-- loadUpcomingBikesPage -->
+                  <span class="method-name">loadUpcomingBikesPage</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="navigateToUsedCarsPage">
-                  </a> <!-- navigateToUsedCarsPage -->
-                  <span class="method-name">navigateToUsedCarsPage</span>
+                  <a name="navigateToUpcomingBikesPage">
+                  </a> <!-- navigateToUpcomingBikesPage -->
+                  <span class="method-name">navigateToUpcomingBikesPage</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -171,7 +171,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\rawna\AppData\Local\Temp\testng-eclipse--1794990011\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\rawna\AppData\Local\Temp\testng-eclipse--1088077184\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -180,7 +180,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;TS_02.Usedcarschn&quot;/&gt;
+      &lt;class name=&quot;TS_01.UpcomingRequirement&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -208,11 +208,11 @@
               <span class="test-group-name">SmokeTest</span>
               <br/>
               <div class="method-in-group">
-                <span class="method-in-group-name">clickSearchUsedCarsFromDrpdwn</span>
+                <span class="method-in-group-name">loadUpcomingBikesPage</span>
                 <br/>
               </div> <!-- method-in-group -->
               <div class="method-in-group">
-                <span class="method-in-group-name">navigateToUsedCarsPage</span>
+                <span class="method-in-group-name">navigateToUpcomingBikesPage</span>
                 <br/>
               </div> <!-- method-in-group -->
               <div class="method-in-group">
@@ -242,21 +242,21 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(4);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'clickSearchUsedCarsFromDrpdwn')
-data.setCell(0, 2, 'TS_02.Usedcarschn')
-data.setCell(0, 3, 1751);
+data.setCell(0, 1, 'loadUpcomingBikesPage')
+data.setCell(0, 2, 'TS_01.UpcomingRequirement')
+data.setCell(0, 3, 1568);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'outputDisplay')
-data.setCell(1, 2, 'TS_02.Usedcarschn')
-data.setCell(1, 3, 410);
+data.setCell(1, 2, 'TS_01.UpcomingRequirement')
+data.setCell(1, 3, 271);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'navigateToUsedCarsPage')
-data.setCell(2, 2, 'TS_02.Usedcarschn')
-data.setCell(2, 3, 352);
+data.setCell(2, 1, 'startBrowser')
+data.setCell(2, 2, 'TS_01.UpcomingRequirement')
+data.setCell(2, 3, 120);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'startBrowser')
-data.setCell(3, 2, 'TS_02.Usedcarschn')
-data.setCell(3, 3, 250);
+data.setCell(3, 1, 'navigateToUpcomingBikesPage')
+data.setCell(3, 2, 'TS_01.UpcomingRequirement')
+data.setCell(3, 3, 67);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
@@ -287,54 +287,54 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">TS_02.Usedcarschn</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">TS_01.UpcomingRequirement</div> <!-- chronological-class-name -->
               <div class="configuration-suite before">
                 <span class="method-name">reportSetUp</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-suite before -->
               <div class="configuration-class before">
                 <span class="method-name">setUp(chrome, local, null)</span>
-                <span class="method-start">512 ms</span>
+                <span class="method-start">328 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">startBrowser</span>
-                <span class="method-start">8125 ms</span>
+                <span class="method-start">6285 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">testResult([TestResult name=startBrowser status=SUCCESS method=Usedcarschn.startBrowser()[pri:0, instance:TS_02...)</span>
-                <span class="method-start">8377 ms</span>
+                <span class="method-name">testResult([TestResult name=startBrowser status=SUCCESS method=UpcomingRequirement.startBrowser()[pri:0, instan...)</span>
+                <span class="method-start">6407 ms</span>
               </div> <!-- configuration-method after -->
               <div class="test-method">
-                <span class="method-name">clickSearchUsedCarsFromDrpdwn</span>
-                <span class="method-start">8398 ms</span>
+                <span class="method-name">loadUpcomingBikesPage</span>
+                <span class="method-start">6420 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">testResult([TestResult name=clickSearchUsedCarsFromDrpdwn status=SUCCESS method=Usedcarschn.clickSearchUsedCars...)</span>
-                <span class="method-start">10152 ms</span>
+                <span class="method-name">testResult([TestResult name=loadUpcomingBikesPage status=SUCCESS method=UpcomingRequirement.loadUpcomingBikesPa...)</span>
+                <span class="method-start">7990 ms</span>
               </div> <!-- configuration-method after -->
               <div class="test-method">
-                <span class="method-name">navigateToUsedCarsPage</span>
-                <span class="method-start">10173 ms</span>
+                <span class="method-name">navigateToUpcomingBikesPage</span>
+                <span class="method-start">7998 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">testResult([TestResult name=navigateToUsedCarsPage status=SUCCESS method=Usedcarschn.navigateToUsedCarsPage()[p...)</span>
-                <span class="method-start">10526 ms</span>
+                <span class="method-name">testResult([TestResult name=navigateToUpcomingBikesPage status=SUCCESS method=UpcomingRequirement.navigateToUpc...)</span>
+                <span class="method-start">8066 ms</span>
               </div> <!-- configuration-method after -->
               <div class="test-method">
                 <span class="method-name">outputDisplay</span>
-                <span class="method-start">10536 ms</span>
+                <span class="method-start">8074 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">testResult([TestResult name=outputDisplay status=SUCCESS method=Usedcarschn.outputDisplay()[pri:3, instance:TS_...)</span>
-                <span class="method-start">10947 ms</span>
+                <span class="method-name">testResult([TestResult name=outputDisplay status=SUCCESS method=UpcomingRequirement.outputDisplay()[pri:3, inst...)</span>
+                <span class="method-start">8345 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-class after">
                 <span class="method-name">closeBrowser</span>
-                <span class="method-start">10958 ms</span>
+                <span class="method-start">8352 ms</span>
               </div> <!-- configuration-class after -->
               <div class="configuration-suite after">
                 <span class="method-name">flush</span>
-                <span class="method-start">11900 ms</span>
+                <span class="method-start">8996 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
