--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,27 +4,31 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>TS_01.Price</td>
+<td>TS_01.UpcomingRequirement</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>clickUpcomingFromDrpdwn</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>selectPriceRangeLink</td>
-<td>&nbsp;</td></tr>
+<td>navigateToUpcomingBikesPage</td>
+<td>SmokeTest </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
 <td>startBrowser</td>
-<td>&nbsp;</td></tr>
+<td>SmokeTest </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>loadUpcomingBikesPage</td>
+<td>SmokeTest </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
 <td>outputDisplay</td>
-<td>&nbsp;</td></tr>
+<td>SmokeTest </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
