Editted for JavaScript Code
Signed-off-by: paviyaa <senthilkumarjs67@gmail.com>

--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,13 +9,11 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">8,662</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">8,597</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">TS_01.UpcomingRequirement</td><td><a href="#m0">loadUpcomingBikesPage</a></td><td rowspan="1">1593138760848</td><td rowspan="1">1568</td></tr><tr class="passedeven"><td><a href="#m1">navigateToUpcomingBikesPage</a></td><td rowspan="1">1593138762426</td><td rowspan="1">67</td></tr><tr class="passedeven"><td><a href="#m2">outputDisplay</a></td><td rowspan="1">1593138762502</td><td rowspan="1">271</td></tr><tr class="passedeven"><td><a href="#m3">startBrowser</a></td><td rowspan="1">1593138760713</td><td rowspan="1">120</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">TS_01.Check</td><td><a href="#m0">startBrowser</a></td><td rowspan="1">1593153411137</td><td rowspan="1">133</td></tr><tr class="passedeven"><td><a href="#m1">test</a></td><td rowspan="1">1593153411285</td><td rowspan="1">429</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">TS_01.UpcomingRequirement#loadUpcomingBikesPage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">TS_01.UpcomingRequirement#navigateToUpcomingBikesPage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">TS_01.UpcomingRequirement#outputDisplay</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">TS_01.UpcomingRequirement#startBrowser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">TS_01.Check#startBrowser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">TS_01.Check#test</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
