--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\rawna\AppData\Local\Temp\testng-eclipse--1088077184\testng-customsuite.xml</span>
+                    <span>C:\Users\rawna\AppData\Local\Temp\testng-eclipse--1123421908\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -59,7 +59,7 @@
                 </li>
                 <li>
                   <a href="#" class="navigator-link " panel-name="group-Default_suite">
-                    <span>1 group</span>
+                    <span>0 groups</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">4 methods,   4 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,22 +102,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="TS_01.UpcomingRequirement" hash-for-method="loadUpcomingBikesPage">loadUpcomingBikesPage</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="TS_01.Check" hash-for-method="startBrowser">startBrowser</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="TS_01.UpcomingRequirement" hash-for-method="navigateToUpcomingBikesPage">navigateToUpcomingBikesPage</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="TS_01.UpcomingRequirement" hash-for-method="outputDisplay">outputDisplay</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="TS_01.UpcomingRequirement" hash-for-method="startBrowser">startBrowser</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="TS_01.Check" hash-for-method="test">test</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -135,30 +125,9 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">TS_01.UpcomingRequirement</span>
+              <span class="class-name">TS_01.Check</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="loadUpcomingBikesPage">
-                  </a> <!-- loadUpcomingBikesPage -->
-                  <span class="method-name">loadUpcomingBikesPage</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="navigateToUpcomingBikesPage">
-                  </a> <!-- navigateToUpcomingBikesPage -->
-                  <span class="method-name">navigateToUpcomingBikesPage</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="outputDisplay">
-                  </a> <!-- outputDisplay -->
-                  <span class="method-name">outputDisplay</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
                   <a name="startBrowser">
@@ -166,12 +135,19 @@
                   <span class="method-name">startBrowser</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="test">
+                  </a> <!-- test -->
+                  <span class="method-name">test</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Default_suite-class-passed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\rawna\AppData\Local\Temp\testng-eclipse--1088077184\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\rawna\AppData\Local\Temp\testng-eclipse--1123421908\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -180,7 +156,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;TS_01.UpcomingRequirement&quot;/&gt;
+      &lt;class name=&quot;TS_01.Check&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -204,26 +180,6 @@
             <span class="header-content">Groups for Default suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
-            <div class="test-group">
-              <span class="test-group-name">SmokeTest</span>
-              <br/>
-              <div class="method-in-group">
-                <span class="method-in-group-name">loadUpcomingBikesPage</span>
-                <br/>
-              </div> <!-- method-in-group -->
-              <div class="method-in-group">
-                <span class="method-in-group-name">navigateToUpcomingBikesPage</span>
-                <br/>
-              </div> <!-- method-in-group -->
-              <div class="method-in-group">
-                <span class="method-in-group-name">outputDisplay</span>
-                <br/>
-              </div> <!-- method-in-group -->
-              <div class="method-in-group">
-                <span class="method-in-group-name">startBrowser</span>
-                <br/>
-              </div> <!-- method-in-group -->
-            </div> <!-- test-group -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="times-Default_suite" class="panel">
@@ -240,28 +196,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(4);
+data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'loadUpcomingBikesPage')
-data.setCell(0, 2, 'TS_01.UpcomingRequirement')
-data.setCell(0, 3, 1568);
+data.setCell(0, 1, 'test')
+data.setCell(0, 2, 'TS_01.Check')
+data.setCell(0, 3, 429);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'outputDisplay')
-data.setCell(1, 2, 'TS_01.UpcomingRequirement')
-data.setCell(1, 3, 271);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'startBrowser')
-data.setCell(2, 2, 'TS_01.UpcomingRequirement')
-data.setCell(2, 3, 120);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'navigateToUpcomingBikesPage')
-data.setCell(3, 2, 'TS_01.UpcomingRequirement')
-data.setCell(3, 3, 67);
+data.setCell(1, 1, 'startBrowser')
+data.setCell(1, 2, 'TS_01.Check')
+data.setCell(1, 3, 133);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 2 seconds</span>
+              <span class="suite-total-time">Total running time: 562 ms</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -287,54 +235,38 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">TS_01.UpcomingRequirement</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">TS_01.Check</div> <!-- chronological-class-name -->
               <div class="configuration-suite before">
                 <span class="method-name">reportSetUp</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-suite before -->
               <div class="configuration-class before">
                 <span class="method-name">setUp(chrome, local, null)</span>
-                <span class="method-start">328 ms</span>
+                <span class="method-start">1636 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">startBrowser</span>
-                <span class="method-start">6285 ms</span>
+                <span class="method-start">8970 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">testResult([TestResult name=startBrowser status=SUCCESS method=UpcomingRequirement.startBrowser()[pri:0, instan...)</span>
-                <span class="method-start">6407 ms</span>
+                <span class="method-name">testResult([TestResult name=startBrowser status=SUCCESS method=Check.startBrowser()[pri:0, instance:TS_01.Check...)</span>
+                <span class="method-start">9105 ms</span>
               </div> <!-- configuration-method after -->
               <div class="test-method">
-                <span class="method-name">loadUpcomingBikesPage</span>
-                <span class="method-start">6420 ms</span>
+                <span class="method-name">test</span>
+                <span class="method-start">9118 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">testResult([TestResult name=loadUpcomingBikesPage status=SUCCESS method=UpcomingRequirement.loadUpcomingBikesPa...)</span>
-                <span class="method-start">7990 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="test-method">
-                <span class="method-name">navigateToUpcomingBikesPage</span>
-                <span class="method-start">7998 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">testResult([TestResult name=navigateToUpcomingBikesPage status=SUCCESS method=UpcomingRequirement.navigateToUpc...)</span>
-                <span class="method-start">8066 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="test-method">
-                <span class="method-name">outputDisplay</span>
-                <span class="method-start">8074 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">testResult([TestResult name=outputDisplay status=SUCCESS method=UpcomingRequirement.outputDisplay()[pri:3, inst...)</span>
-                <span class="method-start">8345 ms</span>
+                <span class="method-name">testResult([TestResult name=test status=SUCCESS method=Check.test()[pri:0, instance:TS_01.Check@928763c] output...)</span>
+                <span class="method-start">9548 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-class after">
                 <span class="method-name">closeBrowser</span>
-                <span class="method-start">8352 ms</span>
+                <span class="method-start">9556 ms</span>
               </div> <!-- configuration-class after -->
               <div class="configuration-suite after">
                 <span class="method-name">flush</span>
-                <span class="method-start">8996 ms</span>
+                <span class="method-start">10236 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
