--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,31 +4,19 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>TS_01.UpcomingRequirement</td>
+<td>TS_01.Check</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>navigateToUpcomingBikesPage</td>
-<td>SmokeTest </td>
-</tr>
+<td>test</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
 <td>startBrowser</td>
-<td>SmokeTest </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>loadUpcomingBikesPage</td>
-<td>SmokeTest </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>outputDisplay</td>
-<td>SmokeTest </td>
-</tr>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
