--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,28 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9b92d7">  <td>20/06/26 08:02:34</td>   <td>0</td> <td title="&gt;&gt;BeginnerClass.reportSetUp()[pri:0, instance:TS_01.UpcomingRequirement@7ed7259e]">&gt;&gt;reportSetUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1847637306</td>   <td></td> </tr>
-<tr bgcolor="9b92d7">  <td>20/06/26 08:02:34</td>   <td>329</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BeginnerClass.setUp(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:TS_01.UpcomingRequirement@7ed7259e]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1847637306</td>   <td></td> </tr>
-<tr bgcolor="bcb197">  <td>20/06/26 08:02:40</td>   <td>6282</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UpcomingRequirement.startBrowser()[pri:0, instance:TS_01.UpcomingRequirement@7ed7259e]">startBrowser</td> 
-  <td>main@1847637306</td>   <td></td> </tr>
-<tr bgcolor="9b92d7">  <td>20/06/26 08:02:40</td>   <td>6405</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BeginnerClass.testResult(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:TS_01.UpcomingRequirement@7ed7259e]">&lt;&lt;testResult</td> 
-<td>&nbsp;</td>  <td>main@1847637306</td>   <td></td> </tr>
-<tr bgcolor="bcb197">  <td>20/06/26 08:02:40</td>   <td>6417</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UpcomingRequirement.loadUpcomingBikesPage()[pri:1, instance:TS_01.UpcomingRequirement@7ed7259e]">loadUpcomingBikesPage</td> 
-  <td>main@1847637306</td>   <td></td> </tr>
-<tr bgcolor="9b92d7">  <td>20/06/26 08:02:42</td>   <td>7987</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BeginnerClass.testResult(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:TS_01.UpcomingRequirement@7ed7259e]">&lt;&lt;testResult</td> 
-<td>&nbsp;</td>  <td>main@1847637306</td>   <td></td> </tr>
-<tr bgcolor="bcb197">  <td>20/06/26 08:02:42</td>   <td>7995</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UpcomingRequirement.navigateToUpcomingBikesPage()[pri:2, instance:TS_01.UpcomingRequirement@7ed7259e]">navigateToUpcomingBikesPage</td> 
-  <td>main@1847637306</td>   <td></td> </tr>
-<tr bgcolor="9b92d7">  <td>20/06/26 08:02:42</td>   <td>8063</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BeginnerClass.testResult(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:TS_01.UpcomingRequirement@7ed7259e]">&lt;&lt;testResult</td> 
-<td>&nbsp;</td>  <td>main@1847637306</td>   <td></td> </tr>
-<tr bgcolor="bcb197">  <td>20/06/26 08:02:42</td>   <td>8071</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UpcomingRequirement.outputDisplay()[pri:3, instance:TS_01.UpcomingRequirement@7ed7259e]">outputDisplay</td> 
-  <td>main@1847637306</td>   <td></td> </tr>
-<tr bgcolor="9b92d7">  <td>20/06/26 08:02:42</td>   <td>8342</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BeginnerClass.testResult(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:TS_01.UpcomingRequirement@7ed7259e]">&lt;&lt;testResult</td> 
-<td>&nbsp;</td>  <td>main@1847637306</td>   <td></td> </tr>
-<tr bgcolor="9b92d7">  <td>20/06/26 08:02:42</td>   <td>8349</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BeginnerClass.closeBrowser()[pri:0, instance:TS_01.UpcomingRequirement@7ed7259e]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1847637306</td>   <td></td> </tr>
-<tr bgcolor="9b92d7">  <td>20/06/26 08:02:43</td>   <td>8993</td> <td title="&lt;&lt;BeginnerClass.flush()[pri:0, instance:TS_01.UpcomingRequirement@7ed7259e]">&lt;&lt;flush</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1847637306</td>   <td></td> </tr>
+<tr bgcolor="f986e6">  <td>20/06/26 12:06:42</td>   <td>0</td> <td title="&gt;&gt;BeginnerClass.reportSetUp()[pri:0, instance:TS_01.Check@928763c]">&gt;&gt;reportSetUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1601687801</td>   <td></td> </tr>
+<tr bgcolor="f986e6">  <td>20/06/26 12:06:43</td>   <td>1639</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BeginnerClass.setUp(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:TS_01.Check@928763c]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1601687801</td>   <td></td> </tr>
+<tr bgcolor="82df6a">  <td>20/06/26 12:06:51</td>   <td>8966</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Check.startBrowser()[pri:0, instance:TS_01.Check@928763c]">startBrowser</td> 
+  <td>main@1601687801</td>   <td></td> </tr>
+<tr bgcolor="f986e6">  <td>20/06/26 12:06:51</td>   <td>9101</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BeginnerClass.testResult(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:TS_01.Check@928763c]">&lt;&lt;testResult</td> 
+<td>&nbsp;</td>  <td>main@1601687801</td>   <td></td> </tr>
+<tr bgcolor="82df6a">  <td>20/06/26 12:06:51</td>   <td>9114</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Check.test()[pri:0, instance:TS_01.Check@928763c]">test</td> 
+  <td>main@1601687801</td>   <td></td> </tr>
+<tr bgcolor="f986e6">  <td>20/06/26 12:06:51</td>   <td>9544</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BeginnerClass.testResult(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:TS_01.Check@928763c]">&lt;&lt;testResult</td> 
+<td>&nbsp;</td>  <td>main@1601687801</td>   <td></td> </tr>
+<tr bgcolor="f986e6">  <td>20/06/26 12:06:51</td>   <td>9552</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BeginnerClass.closeBrowser()[pri:0, instance:TS_01.Check@928763c]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1601687801</td>   <td></td> </tr>
+<tr bgcolor="f986e6">  <td>20/06/26 12:06:52</td>   <td>10232</td> <td title="&lt;&lt;BeginnerClass.flush()[pri:0, instance:TS_01.Check@928763c]">&lt;&lt;flush</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1601687801</td>   <td></td> </tr>
 </table>
